# wetterdienst

./: .coveragerc  .dockerignore  .flake8  .gitattributes  .gitignore  .readthedocs.yml  AGENTS.md  CHANGELOG.md  CHANGELOG.rst  CHANGELOG_FRONTEND.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  CONTRIBUTORS.md  CONTRIBUTORS.rst  DWD_FTP_STRUCTURE.md  Dockerfile  Dockerfile_core  LICENSE  LICENSE.md  LICENSE.rst  README.md  README.rst  THIRD_PARTY_LICENSES  THIRD_PARTY_NOTICES  _parameter.py  codecov.yml  compose.yml  dwd.json  dwd_ftp_structure.md  dwd_ftp_structure.txt  frontend.Dockerfile  frontend.dev.Dockerfile  mkdocs.yml  noxfile.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  (+3 more)
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  RELEASE_STRATEGY.md  SECURITY.md  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/release/: Dockerfile  full.test.yml  selftest.sh  standard.test.yml  test.yml
.github/workflows/: README.md  codecov.yml  codeql-analysis.yml  codeql.yml  coverage.yml  dependency-review.yml  docker-cleanup.yml  docker-publish-core.yml  docker-publish-frontend.yml  docker-publish-full.yml  docker-publish-standard.yml  docker-publish.yml  docker-test.yml  docker_publish.yml  docker_test.yml  docs.yml  frontend-release.yml  frontend-tests.yml  install.sh  lint.yml  linter.yml  main.yml  release.yml  terraform.yml  tests-xdist.yml  tests.yml  typecheck.yml  typing.yml  unused.yml  vulnerable.yml  workflow.yml  zizmor.yml
benchmarks/: interpolation.py  interpolation_over_time.py  interpolation_precipitation_difference.py  summary_over_time.py
docker/: Dockerfile  frontend.Dockerfile  frontend.dev.Dockerfile
docs/: Makefile  behind_the_scenes.rst  changelog.md  conf.py  data_coverage.rst  development.rst  index.md  index.rst  installation.rst  known_issues.md  known_issues.rst  license.md  license.rst  overview.md  overview.rst  requirements.txt  usage.rst
docs/contribution/: development.md  development.rst  index.md  index.rst  introduction.rst  services.md  services.rst
docs/data/: coverage.rst  index.md  index.rst  introduction.rst  license.rst  overview.md  parameters.md  parameters.rst
docs/img/: readme_img.py
docs/javascript/: readthedocs.js
docs/license/: index.rst  third_party.rst  wetterdienst.rst
docs/pages/: api.rst  behind_the_scenes.rst  cli.rst  data_coverage.rst  development.rst  dwd_quality.rst  installation.rst  license.rst  license_and_citation.rst  service.rst  tutorial.rst  usage.rst  welcome.rst
docs/stylesheets/: readthedocs.css
docs/usage/: api.rst  cli.md  cli.rst  code_snippets.rst  dash-ui.rst  docker.md  docker.rst  explorer.md  explorer.rst  http_api.rst  index.md  index.rst  introduction.rst  python-api.md  python-api.rst  python-examples.md  python-examples.rst  restapi.md  restapi.rst  settings.md  settings.rst  station_history.md  streamlit.rst  units.md
example/: climate_observations.ipynb  dwd_describe_fields.py  dwd_road_weather.py  mosmix.py  mosmix_forecasts.py  observations_hdf5.py  observations_sites.py  observations_sql.py  observations_station_gaussian_model.py  observations_stations.py  python_dwd_example.ipynb  radolan.py  simple_example.ipynb  sql.py  wetterdienst_notebook.ipynb
example/radar/: radar_composite_rw.py  radar_composite_rx.py  radar_radolan_cdc.py  radar_radolan_rw.py  radar_scan_precip.py  radar_scan_volume.py  radar_site_dx.py  radar_sweep_hdf5.py
examples/: dwd_climate_summary_xarray_dump.py  dwd_describe_fields.py  dwd_road_weather.py  forecast_validation.py  mosmix_forecasts.py  observations_sql.py  observations_station_gaussian_model.py  observations_stations.py  observations_xarray_dump.py  plot_german_weather_stations.py  plot_hohenpeissenberg_warming_stripes.py  plot_temperature_timeseries.py  wetterdienst_notebook.ipynb
examples/notebooks/: wetterdienst_notebook.ipynb
examples/radar/: radar_composite_rw.py  radar_radolan_cdc.py  radar_radolan_rw.py  radar_scan_precip.py  radar_scan_volume.py  radar_site_dx.py  radar_sweep_hdf5.py
frontend/: .dockerignore  .gitignore  app.vue  eslint.config.mjs  nuxt.config.ts  package.json  playwright.config.ts  plotly-basic-dist-min.d.ts  plotly-dist-min.d.ts  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts
frontend/app/: app.config.ts  app.vue
frontend/i18n/: i18n.config.ts
frontend/layouts/: default.vue
frontend/pages/: api.vue  explorer.vue  index.vue
frontend/playwright-report/: index.html
frontend/types/: api.types.ts
notebooks/: wetterdienst_pyconde_pydata_2026_demo.py
pydwd/: __init__.py  classes.py  download_dwd.py  functions.py  metadata_dwd.py  read_dwd.py  select_dwd.py
pydwd/additionals/: dwd_credentials.py  generic_classes.py  generic_functions.py  generic_variables.py  helpers.py  metadata_functions.py  pydwd_credentials.py  read_functions.py  select_functions.py
python/: download_dwd.py  metadata_dwd.py  pydwd.py
python_dwd/: __init__.py  cli.py  climate_request.py  data_collection.py  data_storing.py  download_dwd.py  dwd_station_request.py  metadata_dwd.py  parse_metadata.py  read_dwd.py  request_dwd.py  run.py  select_dwd.py
python_dwd/additionals/: classes.py  functions.py  helpers.py  (+6 more)
terraform/: .terraform.lock.hcl  artifact_registry.tf  cloud_storage.tf  cloudrun.tf  iam.tf  main.tf  network.tf  security_policy.tf  service_accounts.tf  variables.tf
tests/: __init__.py  conftest.py  test_api.py  test_cli.py  test_data_collection.py  test_data_storing.py  test_docs.py  test_dwd_station_request.py  test_history.py  test_io.py  test_metadata_dwd.py  test_mosmix.py  test_parse_metadata.py  test_radolan.py  test_readme.py  test_request_dwd.py  test_run.py  test_service.py  test_settings.py
tests-xdist/: conftest.py  test_foobar.py
tools/: citation.py
wetterdienst/: __init__.py  api.py  boot.py  cli.py  data_collection.py  data_storing.py  dwd_station_request.py  eccodes.py  exceptions.py  io.py  mosmix.py  parse_metadata.py  radolan.py  run.py  service.py  settings.py
(+958 files in other folders)
