[project]
name = "wetterdienst"
version = "0.96.0"
authors = [
  { name = "Benjamin Gutzmann", email = "gutzemann@gmail.com" },
  { name = "Andreas Motl", email = "andreas.motl@panodata.org" },
]
description = "Open weather data for humans"
readme = "README.rst"
license = { file = "LICENSE" }
keywords = [
  # DWD
  "deutscher-wetterdienst",
  "dmo",
  # Eaufrance Hubeau
  "eaufrance-hubeau",
  # ECCC
  "environment-and-climate-change-canada",
  # EA
  "environmental-agency-uk",
  # WSV
  "federal-waterways-and-shipping-administration-germany",
  "forecast",
  # Geosphere Austria
  "geosphere-austria",
  "ghcn",
  "historical",
  # IMGW
  "institute-of-meteorology-and-water-management-poland",
  "mosmix",
  # NOAA
  "national-oceanic-and-atmospheric-administration",
  # NWS
  "national-weather-service",
  "near-real-time",
  "observation",
  "open-data",
  "open-source",
  "radar",
  "radolan",
  "recent",
  "time-series",
  "weather-api",
  "weather-data",
  "weather-station",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Communications",
  "Topic :: Database",
  "Topic :: Internet",
  "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
  "Topic :: Scientific/Engineering :: GIS",
  "Topic :: Scientific/Engineering :: Human Machine Interfaces",
  "Topic :: Scientific/Engineering :: Hydrology",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
  "Topic :: Scientific/Engineering :: Visualization",
  "Topic :: Software Development :: Libraries",
  "Topic :: System :: Archiving",
  "Topic :: Text Processing",
  "Topic :: Utilities",
]
requires-python = ">=3.9,<4.0"
dependencies = [
  "aenum>=3",
  "aiohttp>=3.8",
  "backports-datetime-fromisoformat>=2; python_version<'3.11'",
  "beautifulsoup4>=4.9",
  "cachetools>=5.2",
  "click>=8",
  "click-params>=0.4.1",
  "cloup>=3.0.1",
  "deprecation>=2.1",
  "diskcache>=5.4",
  "environs>=9.4",
  "eval-type-backport>=0.1.3; python_version<'3.10'",
  "fastexcel>=0.10.4",
  "fsspec>=2023.1",
  "lxml>=4.9.1",
  "measurement>=3.2",
  "numpy>=1.22",
  "pillow>=10.3",
  "pint>=0.17",
  "platformdirs",
  "polars>=1.0.0",
  "portion>=2.4.2",
  "pyarrow>=13",
  "pydantic>=2.7.3",
  "pypdf>=3.12.1",
  "python-dateutil",
  "rapidfuzz>=3.1",
  "requests>=2.20",
  "scikit-learn>=1.0.2",
  "stamina>=23",
  "tabulate>=0.8",
  "tqdm>=4",
  "tzfpy>=0.15.2",
]

[project.optional-dependencies]
bufr = [
  "pdbufr>=0.10.2",
  "pybufrkit>=0.2",
]
cratedb = [
  "pandas>=2",
  "sqlalchemy-cratedb",
]
duckdb = [
  "duckdb>=0.9",
  "pandas>=2",
]
eccodes = [
  "eccodes>=1.5.2",
]
excel = [
  "xlsxwriter>=3.0.9",
]
explorer = [
  "duckdb>=0.9",
  "plotly>=5.11",
  "statsmodels>=0.14.1",
  "streamlit>=1.27",
]
export = [
  "pandas>=2",
  "sqlalchemy>=2",
  "xarray>=2023.1",
  "xlsxwriter>=3.0.9",
  "zarr>=2.13",
]
export_without_zarr = [
  "pandas>=2",
  "sqlalchemy>=2",
  "xarray>=2023.1",
  "xlsxwriter>=3.0.9",
]
influxdb = [
  "influxdb>=5.3",
  "influxdb-client>=1.18",
  "influxdb3-python>=0.3",
]
interpolation = [
  "scipy>=1.9",
  "shapely>=2",
  "utm>=0.7",
]
ipython = [
  "ipython>=8.5",
  "matplotlib>=3.3",
]
mpl = [
  "matplotlib>=3.3",
]
mysql = [
  "mysqlclient>=2",
  "pandas>=2",
]
postgresql = [
  "psycopg2-binary>=2",
]
radar = [
  "h5py>=3.1",
]
radarplus = [
  "pybufrkit>=0.2",
  "wradlib>=2.0.1",
  "xradar>=0.2",
]
restapi = [
  "fastapi>=0.95.1",
  "httpx>=0.24",
  "uvicorn>=0.14",
]
sql = [
  "duckdb>=0.9",
]
# docs
docs = [
  "docformatter>=1.4",
  "furo>=2023.3",
  "ipython>=8.5",
  "matplotlib>=3.3",
  "pickleshare==0.7.5",
  "pyyaml>=6",
  "sphinx>=7",
  "sphinx-autodoc-typehints>=1.11",
  "sphinx-autobuild>=2020.9",
  "sphinx_design>=0.5",
  "sphinxcontrib-svg2pdfconverter>=1.1",
  "tomlkit>=0.7",
]

[project.urls]
Explorer = "https://wetterdienst.streamlit.app/"
Homepage = "https://wetterdienst.readthedocs.io/"
Issues = "https://github.com/earthobservations/wetterdienst/issues"
Releases = "https://github.com/earthobservations/wetterdienst/releases"
Repository = "https://github.com/earthobservations/wetterdienst"
Restapi = "https://wetterdienst.eobs.org/"
Stripes = "https://stripes.streamlit.app/"

[project.scripts]
wddump = "wetterdienst.provider.dwd.radar.cli:wddump"
wetterdienst = "wetterdienst.ui.cli:cli"

[tool.uv]
dev-dependencies = [
  # general
  "coverage[toml]>=7.3",
  "dirty-equals>=0.5",
  "freezegun>=1.2",
  "h5py>=3.1",
  "jsonschema[format-nongpl]>=4.17.3",
  "lmfit>=1.1.0",
  "pybufrkit>=0.2",
  "pytest>=7.2",
  "pytest-cov>=4",
  "pytest-dictsdiff>=0.5",
  "pytest-notebook>=0.10",
  "pytest-rerunfailures",
  "pytest-xdist>=3",
  "surrogate==0.1",
  # formatting and linting
  "ruff>=0.3.3",
  "poethepoet>=0.27.0",
]

[tool.poe.tasks]
install-dev = { cmd = "uv pip install .[bufr,cratedb,duckdb,explorer,export,influxdb,interpolation,mpl,mysql,ipython,radar,radarplus,restapi,postgresql,sql]" }
# Formatting and linting
"format:fmt" = "uv run ruff format"
"format:lint" = "uv run ruff check --fix"
format = [ "format:fmt", "format:lint" ]
"lint:fmt" = "uv run ruff format --check"
"lint:lint" = "uv run ruff check"
lint = [ "lint:fmt", "lint:lint" ]
# docs
docs = "cd docs && make html"
"test:parallel" = "uv run pytest -vvv --numprocesses=auto -m 'not (explorer or cflake)'"
"test:cflakes" = "uv run pytest -vvv -m cflake"
test = [ "test:parallel", "test:cflakes" ]
# For Windows CI
test-slow = "uv run pytest"
coverage = "uv run pytest --cov=wetterdienst"
coverage-parallel = "uv run pytest --cov=wetterdienst --numprocesses=auto -m 'not (explorer or cflake)'"
sync = "uv sync"
lock = "uv lock"

[tool.ruff]
target-version = "py39"
line-length = 120
include = [
  "benchmarks/**/*.py",
  "examples/**/*.py",
  "tests/**/*.py",
  "wetterdienst/**/*.py",
]
extend-include = [
  "*.ipynb",
]
[tool.ruff.lint]
select = [
    # Bandit
    "S",
    # eradicate
    "ERA",
    # flake8-2020
    "YTT",
    # isort
    "I",
    # print
    "T20",
    # Pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # return
    "RET",
    # pyupgrade
    "UP",
    # flake8-commas
    "COM",
    # future-annotations
    "FA",
    # flake8-type-checking
    "TCH",
    # flake8-unused-arguments
    "ARG",
    # flake8-use-pathlib
    "PTH"
]
ignore = [
    # zip() without an explicit strict= parameter.
    "B905",
    # Unnecessary `elif` after `return` statement
    "RET505",
    "COM812"
]
unfixable = ["ERA", "F401", "F841", "T20", "ERA001"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"benchmarks/*" = ["T20"]
"docs/conf.py" = ["ERA001"]
"examples/*" = ["T20"]
"tests/*" = ["S101"]
"tests/provider/dwd/observation/test_available_datasets.py" = ["E402"]
"wetterdienst/__init__.py" = ["E402"]
"wetterdienst/ui/restapi.py" = ["B008", "UP007"]

[tool.pytest.ini_options]
addopts = "-rsfEX -p pytester --strict-markers --verbosity=3"
#log_cli = true
#log_cli_level = "DEBUG"
log_date_format = "%Y-%m-%dT%H:%M:%S"
log_format = "%(asctime)-15s.%(msecs)03d [%(name)-35s] %(levelname)-8s: %(message)s"
log_level = "DEBUG"
markers = [
  "remote: Tests accessing the internet.",
  "slow: Slow tests.",
  "sql: All tests related to SQL.",
  "explorer: All tests related to the explorer UI.",
  "cflake: Tests which are flaky under concurrency",
]
minversion = "2.0"
testpaths = [ "tests" ]
# Detect tests marked with xfail, which are actually succeeding.
# xfail_strict = true

# Retry flaky tests, thereby improving the consistency of the test suite results.
reruns = 0
reruns_delay = 5

[tool.coverage.run]
branch = true
source = [ "wetterdienst" ]
[tool.coverage.report]
show_missing = true
fail_under = 0
omit = [
  "tests/*",
  "wetterdienst/provider/dwd/radar/cli.py",
]
