[project]
name = "wetterdienst"
version = "0.113.0"
authors = [
  { name = "Benjamin Gutzmann", email = "gutzemann@gmail.com" },
  { name = "Andreas Motl", email = "andreas.motl@panodata.org" },
]
description = "Open weather data for humans"
readme = "README.md"
license = { file = "LICENSE.md" }
keywords = [
  # DWD
  "deutscher-wetterdienst",
  "dmo",
  # Eaufrance Hubeau
  "eaufrance-hubeau",
  # ECCC
  "environment-and-climate-change-canada",
  # EA
  "environmental-agency-uk",
  # WSV
  "federal-waterways-and-shipping-administration-germany",
  "forecast",
  # Geosphere Austria
  "geosphere-austria",
  "ghcn",
  "historical",
  # IMGW
  "institute-of-meteorology-and-water-management-poland",
  "mosmix",
  # NOAA
  "national-oceanic-and-atmospheric-administration",
  # NWS
  "national-weather-service",
  "near-real-time",
  "observation",
  "open-data",
  "open-source",
  "radar",
  "radolan",
  "recent",
  "time-series",
  "weather-api",
  "weather-data",
  "weather-station",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Communications",
  "Topic :: Database",
  "Topic :: Internet",
  "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
  "Topic :: Scientific/Engineering :: GIS",
  "Topic :: Scientific/Engineering :: Human Machine Interfaces",
  "Topic :: Scientific/Engineering :: Hydrology",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
  "Topic :: Scientific/Engineering :: Visualization",
  "Topic :: Software Development :: Libraries",
  "Topic :: System :: Archiving",
  "Topic :: Text Processing",
  "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = [
  "backports-datetime-fromisoformat>=2; python_version<'3.11'",
  "click>=8,<9",
  "cloup>=3.0.1,<4",
  "diskcache>=5.4,<6",
  "fsspec[http]>=2023.1",
  "lxml>=4.9.1,<7",
  "measurement>=3.2,<4",
  "platformdirs>=4,<5",
  "polars[calamine,pyarrow]>=1.0.0,<2",
  "portion>=2.4.2,<3",
  "pydantic>=2.7.3,<3",
  "pydantic-extra-types>=2.10.1,<3",
  "pydantic-settings>=2.7.0,<3",
  "python-dateutil>=2,<3",
  "rapidfuzz>=3.1,<4",
  "stamina>=23,<26",
  "tabulate>=0.8,<1",
  "tqdm>=4,<5",
  "tzdata>=2024.2",
  "tzfpy>=0.15.2,<2",
]

[project.optional-dependencies]
bufr = [
  "pdbufr>=0.10.2,<1",
  "pybufrkit>=0.2,<1",
]
cratedb = [
  "pandas>=2,<3",
  "sqlalchemy-cratedb<1",
]
duckdb = [
  "duckdb>=0.9,<2",
  "pandas>=2,<3",
]
eccodes = [
  "eccodes>=1.5.2,<3",
]
excel = [
  "xlsxwriter>=3.0.9,<4",
]
explorer = [
  "duckdb>=0.9,<2",
  "plotly>=5.11,<7",
  "statsmodels>=0.14.1,<1",
  "streamlit>=1.27,<2",
]
export = [
  "pandas>=2,<3",
  "sqlalchemy>=2,<3",
  "xarray>=2023.1,<2026",
  "xlsxwriter>=3.0.9,<4",
  "zarr>=3.1,<4;python_version>='3.11'",
]
influxdb = [
  "influxdb>=5.3,<6",
  "influxdb-client>=1.18,<2",
  "influxdb3-python>=0.3,<1",
]
interpolation = [
  "scipy>=1.14.1,<2",
  "shapely>=2,<3",
  "utm>=0.7,<1",
]
# only used in examples for plotting radar data
matplotlib = [
  "matplotlib>=3.3,<4",
]
mysql = [
  "mysqlclient>=2,<3",
  "pandas>=2,<3",
]
pdf = [
  "pypdf>=3.12.1,<7",
]
plotting = [
  "kaleido>=0.2.2",
  "plotly>=5.24.1",
]
postgresql = [
  "psycopg2-binary>=2,<3",
]
radar = [
  "h5py>=3.1,<4",
]
radarplus = [
  "pybufrkit>=0.2,<1",
  "wradlib>=2.0.1,<3",
  "xradar>=0.2,<1",
]
restapi = [
  "fastapi>=0.95.1,<1",
  "httpx>=0.24,<1",
  "uvicorn[standard]>=0.14,<1",
]
sql = [
  "duckdb>=0.9,<2",
]

[project.urls]
Explorer = "https://wetterdienst.streamlit.app/"
Homepage = "https://wetterdienst.readthedocs.io/"
Issues = "https://github.com/earthobservations/wetterdienst/issues"
Releases = "https://github.com/earthobservations/wetterdienst/releases"
Repository = "https://github.com/earthobservations/wetterdienst"
Restapi = "https://wetterdienst.eobs.org/"
Stripes = "https://stripes.streamlit.app/"

[project.scripts]
wddump = "wetterdienst.provider.dwd.radar.cli:wddump"
wetterdienst = "wetterdienst.ui.cli:cli"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "wetterdienst"
module-root = ""

[dependency-groups]
dev = [
  # general
  "dirty-equals>=0.5",
  "freezegun>=1.2",
  "h5py>=3.1",
  "jsonschema[format-nongpl]>=4.17.3",
  "lmfit>=1.1.0",
  "pybufrkit>=0.2",
  "pytest>=7.2",
  "pytest-cov>=4",
  "pytest-rerunfailures",
  "pytest-xdist>=3",
  # formatting and linting
  "ruff>=0.3.3",
  "poethepoet>=0.27.0",
  "creosote>=4.0.1",
  "zizmor>=1.4.1",
]

docs = [
    "myst-nb-json>=0.1.3",
    "myst-nb>=1.2.0",
    "myst-parser>=4.0.1",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-autodoc2>=0.5.0",
    "sphinx-book-theme>=1.1.4",
    "sphinx-copybutton>=0.5.2",
    "sphinx>=8.1.3",
]

[tool.poe.tasks]
# Formatting and linting
"format:fmt" = "uv run ruff format"
"format:lint" = "uv run ruff check --fix"
format = [ "format:fmt", "format:lint" ]
"lint:fmt" = "uv run ruff format --check"
"lint:lint" = "uv run ruff check"
lint = [ "lint:fmt", "lint:lint" ]
creosote = "uv run creosote --path wetterdienst"
zizmor = "uv run zizmor ."
# docs
docs = "cd docs && make html"
"test:parallel" = "uv run pytest -vvv --numprocesses=auto -m 'not (explorer or cflake)'"
"test:cflakes" = "uv run pytest -vvv -m cflake"
test = [ "test:parallel", "test:cflakes" ]
# For Windows CI
test-slow = "uv run pytest"
"_coverage:parallel" = "uv run pytest --cov-report xml --cov wetterdienst tests/ --numprocesses=auto -m 'not (explorer or cflake)'"
"_coverage:cflakes" = "uv run pytest --cov-report xml --cov-append --cov wetterdienst tests/ -m cflake"
coverage = [
  "_coverage:parallel",
  "_coverage:cflakes",
]
sync = "uv sync"
lock = "uv lock"

[tool.ruff]
line-length = 120
include = [
  "benchmarks/**/*.py",
  "examples/**/*.py",
  "tests/**/*.py",
  "wetterdienst/**/*.py",
]
extend-include = [
  "*.ipynb",
]
[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # flake8-todos
    "TD",
    # flake8-fixme
    "FIX",
    # pandas-vet
    "PD",
    # Pylint
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR2004",
    "PLW2901",
    # Perflint (PERF)
    "PERF",
    # flake8-logging-format
    "G004",
    # ignore this because of warning by ruff
    "COM812"
]
unfixable = ["ERA", "F401", "F841", "T20", "ERA001"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401", "D104"]
"tests/*" = ["S101"]
"benchmarks/*" = ["T20", "INP001"]
"examples/*" = ["T20", "INP001"]

[tool.creosote]
paths = [
  "wetterdienst",
  "tests",
  "benchmarks",
  "examples",
]
exclude_deps = [
  "backports-datetime-fromisoformat",
  "diskcache",
  "python-dateutil",
  "tzdata"
]

[tool.pytest.ini_options]
addopts = "-rsfEX -p pytester --strict-markers --verbosity=3"
#log_cli = true
#log_cli_level = "DEBUG"
log_date_format = "%Y-%m-%dT%H:%M:%S"
log_format = "%(asctime)-15s.%(msecs)03d [%(name)-35s] %(levelname)-8s: %(message)s"
log_level = "DEBUG"
markers = [
  "remote: Tests accessing the internet.",
  "slow: Slow tests.",
  "sql: All tests related to SQL.",
  "explorer: All tests related to the explorer UI.",
  "cflake: Tests which are flaky under concurrency",
]
minversion = "2.0"
testpaths = [ "tests" ]
# Detect tests marked with xfail, which are actually succeeding.
# xfail_strict = true

# Retry flaky tests, thereby improving the consistency of the test suite results.
reruns = 0
reruns_delay = 5

[tool.coverage.run]
branch = true
source = [ "wetterdienst" ]
[tool.coverage.report]
show_missing = true
fail_under = 0
omit = [
  "tests/*",
  "wetterdienst/provider/dwd/radar/cli.py",
]
